{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 86,
  "lineage": "1a7f0ac3-9eb4-8c2e-6b68-711b82dfe580",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d767e966f3458eb5",
            "arn": "arn:aws:ec2:eu-west-3:468887949677:instance/i-066f5fc096f982373",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066f5fc096f982373",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0274f5b85a4bc346c",
            "private_dns": "ip-10-0-3-125.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc08054e5060d27f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1a39b1e3a289860",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e190ba7e9e08153b"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.Jenkins_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/jenkins-alb",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-alb-727014619.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "jenkins-alb",
            "idle_timeout": 400,
            "instances": [
              "i-066f5fc096f982373"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "jenkins-alb",
            "security_groups": [
              "sg-0e190ba7e9e08153b"
            ],
            "source_security_group": "468887949677/petclinic-Jenkins",
            "source_security_group_id": "sg-0e190ba7e9e08153b",
            "subnets": [
              "subnet-01d9463419001e99f",
              "subnet-08f7a4e059a945298"
            ],
            "tags": {
              "Name": "jenkins-alb"
            },
            "tags_all": {
              "Name": "jenkins-alb"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins-server",
            "module.vpc.aws_security_group.Jenkins_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.pub-sn-01",
            "module.vpc.aws_subnet.pub-sn-02",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/prod-lb/d24dd43739042b7a",
            "arn_suffix": "app/prod-lb/d24dd43739042b7a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-lb-1558850839.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/prod-lb/d24dd43739042b7a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e1f44abd7e2d3d2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bfe1d0fa440c44a1"
              },
              {
                "subnet_id": "subnet-0e1a39b1e3a289860"
              }
            ],
            "subnets": [
              "subnet-0bfe1d0fa440c44a1",
              "subnet-0e1a39b1e3a289860"
            ],
            "tags": {
              "Environment": "prod-lb"
            },
            "tags_all": {
              "Environment": "prod-lb"
            },
            "vpc_id": "vpc-0527b06e1e36357a4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.Docker_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.prv-sn-02"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "stage-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/stage-lb/e59228aeb7b5f531",
            "arn_suffix": "app/stage-lb/e59228aeb7b5f531",
            "desync_mitigation_mode": "defensive",
            "dns_name": "stage-lb-1461461252.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/stage-lb/e59228aeb7b5f531",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stage-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e1f44abd7e2d3d2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bfe1d0fa440c44a1"
              },
              {
                "subnet_id": "subnet-0e1a39b1e3a289860"
              }
            ],
            "subnets": [
              "subnet-0bfe1d0fa440c44a1",
              "subnet-0e1a39b1e3a289860"
            ],
            "tags": {
              "Name": "stage-alb"
            },
            "tags_all": {
              "Name": "stage-alb"
            },
            "vpc_id": "vpc-0527b06e1e36357a4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.Docker_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.prv-sn-02"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/prod-lb/d24dd43739042b7a/d3129f1f22cd2c27",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/prod-target-group/d8a67b54d0a38ddc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/prod-lb/d24dd43739042b7a/d3129f1f22cd2c27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/prod-lb/d24dd43739042b7a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancer.aws_lb.prod-lb",
            "module.load-balancer.aws_lb_target_group.prod_target-group",
            "module.vpc.aws_security_group.Docker_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.prv-sn-02"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod_lb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/prod-lb/d24dd43739042b7a/703251da8c9806e0",
            "certificate_arn": "arn:aws:acm:eu-west-3:468887949677:certificate/248d06cc-32bd-4ffc-a6cc-32fdc73efca9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/prod-target-group/d8a67b54d0a38ddc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/prod-lb/d24dd43739042b7a/703251da8c9806e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/prod-lb/d24dd43739042b7a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancer.aws_lb.prod-lb",
            "module.load-balancer.aws_lb_target_group.prod_target-group",
            "module.route53.aws_acm_certificate.certificate",
            "module.vpc.aws_security_group.Docker_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.prv-sn-02"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "stage_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/stage-lb/e59228aeb7b5f531/ea98a3db1d69638e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/tg-lb20231111203356331700000003/a1a88e353786ac6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/stage-lb/e59228aeb7b5f531/ea98a3db1d69638e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/stage-lb/e59228aeb7b5f531",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancer.aws_lb.stage-lb",
            "module.load-balancer.aws_lb_target_group.stage_target_group",
            "module.vpc.aws_security_group.Docker_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.prv-sn-02"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "stage_lb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/stage-lb/e59228aeb7b5f531/e11a33816aa4e1d2",
            "certificate_arn": "arn:aws:acm:eu-west-3:468887949677:certificate/248d06cc-32bd-4ffc-a6cc-32fdc73efca9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/tg-lb20231111203356331700000003/a1a88e353786ac6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:listener/app/stage-lb/e59228aeb7b5f531/e11a33816aa4e1d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:loadbalancer/app/stage-lb/e59228aeb7b5f531",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancer.aws_lb.stage-lb",
            "module.load-balancer.aws_lb_target_group.stage_target_group",
            "module.route53.aws_acm_certificate.certificate",
            "module.vpc.aws_security_group.Docker_SG",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.prv-sn-02"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod_target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/prod-target-group/d8a67b54d0a38ddc",
            "arn_suffix": "targetgroup/prod-target-group/d8a67b54d0a38ddc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/prod-target-group/d8a67b54d0a38ddc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stage_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/tg-lb20231111203356331700000003/a1a88e353786ac6a",
            "arn_suffix": "targetgroup/tg-lb20231111203356331700000003/a1a88e353786ac6a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:468887949677:targetgroup/tg-lb20231111203356331700000003/a1a88e353786ac6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-lb20231111203356331700000003",
            "name_prefix": "tg-lb",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c4b799801ef2630",
            "association_id": "eipassoc-07c84fe9458a93ef5",
            "domain": "vpc",
            "id": "eipalloc-07c4b799801ef2630",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0a49823dde7d52bab",
            "private_dns": "ip-10-0-1-155.eu-west-3.compute.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-13-36-135-140.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.135.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:internet-gateway/igw-0212bd877c5880e28",
            "id": "igw-0212bd877c5880e28",
            "owner_id": "468887949677",
            "tags": {
              "Name": "petclinic-igw"
            },
            "tags_all": {
              "Name": "petclinic-igw"
            },
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c4b799801ef2630",
            "association_id": "eipassoc-07c84fe9458a93ef5",
            "connectivity_type": "public",
            "id": "nat-0dd8244fe90c96aa0",
            "network_interface_id": "eni-0a49823dde7d52bab",
            "private_ip": "10.0.1.155",
            "public_ip": "13.36.135.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d9463419001e99f",
            "tags": {
              "Name": "petclinic-nat-gateway"
            },
            "tags_all": {
              "Name": "petclinic-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.pub-sn-01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:route-table/rtb-0a1926af1129805cd",
            "id": "rtb-0a1926af1129805cd",
            "owner_id": "468887949677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dd8244fe90c96aa0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-prv-rt"
            },
            "tags_all": {
              "Name": "petclinic-prv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.pub-sn-01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PUB-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:route-table/rtb-0d12f234ad2531388",
            "id": "rtb-0d12f234ad2531388",
            "owner_id": "468887949677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0212bd877c5880e28",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-pub-rt"
            },
            "tags_all": {
              "Name": "petclinic-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRT1-associated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1c98d44f8dd1c54",
            "route_table_id": "rtb-0a1926af1129805cd",
            "subnet_id": "subnet-0e1a39b1e3a289860"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.PRT",
            "module.vpc.aws_subnet.prv-sn-01",
            "module.vpc.aws_subnet.pub-sn-01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRT2-associated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eb68cf96752d6d6",
            "route_table_id": "rtb-0a1926af1129805cd",
            "subnet_id": "subnet-0bfe1d0fa440c44a1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.PRT",
            "module.vpc.aws_subnet.prv-sn-02",
            "module.vpc.aws_subnet.pub-sn-01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PUB-RT1-associated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07600f77f55d83e7d",
            "route_table_id": "rtb-0d12f234ad2531388",
            "subnet_id": "subnet-01d9463419001e99f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.PUB-RT",
            "module.vpc.aws_subnet.pub-sn-01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PUB-RT2-associated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13669feda2b765a",
            "route_table_id": "rtb-0d12f234ad2531388",
            "subnet_id": "subnet-08f7a4e059a945298"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.PUB-RT",
            "module.vpc.aws_subnet.pub-sn-02",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion-Ansible_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:security-group/sg-0b13ddcb841af531b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b13ddcb841af531b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow proxy access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "petclinic-Bastion-Ansible",
            "name_prefix": "",
            "owner_id": "468887949677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinicBastion-Ansible-sg"
            },
            "tags_all": {
              "Name": "petclinicBastion-Ansible-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Docker_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:security-group/sg-0e1f44abd7e2d3d2e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1f44abd7e2d3d2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow proxy access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "petclinic-Docker",
            "name_prefix": "",
            "owner_id": "468887949677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-Docker-sg"
            },
            "tags_all": {
              "Name": "petclinic-Docker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:security-group/sg-0e190ba7e9e08153b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e190ba7e9e08153b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow proxy access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow proxy access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "petclinic-Jenkins",
            "name_prefix": "",
            "owner_id": "468887949677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-Jenkins-sg"
            },
            "tags_all": {
              "Name": "petclinic-Jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MYSQL_RDS_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:security-group/sg-00039858ec9864b95",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00039858ec9864b95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "petclinic-MYSQL_RDS",
            "name_prefix": "",
            "owner_id": "468887949677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-MYSQL-RDS-sg"
            },
            "tags_all": {
              "Name": "petclinic-MYSQL-RDS-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Nexus_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:security-group/sg-09191c3bb15ba67c6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09191c3bb15ba67c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nexus access",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nexus access",
                "from_port": 8085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8085
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "petclinic-Nexus",
            "name_prefix": "",
            "owner_id": "468887949677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-Nexus-sg"
            },
            "tags_all": {
              "Name": "petclinic-Nexus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Sonarqube_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:security-group/sg-064fd454f9d096b91",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064fd454f9d096b91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow sonarqube access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "petclinic-Sonarqube",
            "name_prefix": "",
            "owner_id": "468887949677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinicSonarqube-sg"
            },
            "tags_all": {
              "Name": "petclinicSonarqube-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv-sn-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:subnet/subnet-0e1a39b1e3a289860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a39b1e3a289860",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468887949677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-prv-sub-01"
            },
            "tags_all": {
              "Name": "petclinic-prv-sub-01"
            },
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv-sn-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:subnet/subnet-0bfe1d0fa440c44a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfe1d0fa440c44a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468887949677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-prv-sub-01"
            },
            "tags_all": {
              "Name": "petclinic-prv-sub-01"
            },
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sn-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:subnet/subnet-01d9463419001e99f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d9463419001e99f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468887949677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-pub-sub-01"
            },
            "tags_all": {
              "Name": "petclinic-pub-sub-01"
            },
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sn-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:subnet/subnet-08f7a4e059a945298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f7a4e059a945298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468887949677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-pub-sub-02"
            },
            "tags_all": {
              "Name": "petclinic-pub-sub-02"
            },
            "vpc_id": "vpc-0527b06e1e36357a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:468887949677:vpc/vpc-0527b06e1e36357a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096ee9c9ae035fc84",
            "default_route_table_id": "rtb-0bd523f197c908ebe",
            "default_security_group_id": "sg-0435d295288da66fe",
            "dhcp_options_id": "dopt-03afbbf3c03069842",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0527b06e1e36357a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd523f197c908ebe",
            "owner_id": "468887949677",
            "tags": {
              "Name": "petclinic-vpc"
            },
            "tags_all": {
              "Name": "petclinic-vpc"
            }
          }
        }
      ]
    }
  ]
}